@@ -3,6 +3,7 @@
 #include <QtGui>
 #include "CREStringListPanel.h"
 #include "CREPrePostPanel.h"
+#include "CREReplyPanel.h"
 
 CRERulePanel::CRERulePanel(QWidget* parent) : QTabWidget(parent)
 {
@@ -22,7 +23,10 @@ CRERulePanel::CRERulePanel(QWidget* parent) : QTabWidget(parent)
     myPost = new CREPrePostPanel(post, this);
     connect(myPost, SIGNAL(dataModified()), this, SLOT(onPostModified()));
     addTab(myPost, tr("post"));
-    addTab(new QLabel(tr("replies")), tr("replies"));
+
+    myReplies = new CREReplyPanel(this);
+    connect(myReplies, SIGNAL(dataModified()), this, SLOT(onRepliesModified()));
+    addTab(myReplies, tr("replies"));
 
     QWidget* w = new QWidget(this);
     QHBoxLayout* l = new QHBoxLayout(w);
@@ -55,6 +59,7 @@ void CRERulePanel::setMessageRule(MessageRule* rule)
         myPre->setData(rule->preconditions());
         myMessages->setData(rule->messages());
         myPost->setData(rule->postconditions());
+        myReplies->setData(rule->replies());
         myInclude->setText(rule->include());
     }
 }
@@ -88,6 +93,14 @@ void CRERulePanel::onPostModified()
     if (myRule == NULL)
         return;
     myRule->setPostconditions(myPost->getData());
+    emit currentRuleModified();
+}
+
+void CRERulePanel::onRepliesModified()
+{
+    if (myRule == NULL)
+        return;
+    myRule->setReplies(myReplies->getData());
     emit currentRuleModified();
 }
 
